# svg-sprite-maker

./: .eslintignore  .eslintrc.cjs  .prettierignore  .prettierrc  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  postcss.config.js  svelte.config.js  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: main.yml
src/: App.svelte  global.css  main.ts  shortcuts.ts  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  config.rs  events.rs  keybindings.rs  main.rs
src-tauri/svg_sprite_parser/: Cargo.toml
src-tauri/svg_sprite_parser/src/: lib.rs  parser.rs  symbol.rs  tag.rs
src/components/: FileHoverIndicator.svelte  SymbolButton.svelte  TransparentGrid.svelte
src/components/FilterBar/: FilterBar.svelte
src/components/Footer/: Footer.svelte
src/components/FooterWindows/: FooterWindow.svelte  Settings.svelte  Shortcuts.svelte
src/components/Settings/: OpacitySlider.svelte  Settings.svelte
src/components/SideMenu/: AddAttributeForm.svelte  NewAttributeForm.svelte  SideMenu.svelte  SideMenuAttributes.svelte  SymbolAttributeInput.svelte  SymbolPreviewGrid.svelte  SymbolPreviewTransparentGrid.svelte
src/components/ToolBar/: ToolBar.svelte
src/components/sidemenu/: SideMenu.svelte
src/types/: applicationSettings.ts  bindings.ts  spriteChangedEvent.ts  symbol.ts  symbolAttribute.ts
