[package]
name = "svg-sprite-maker"
version = "0.0.0"
description = "Svg Sprite Maker"
authors = ["Mathieu Chan Yee Choy"]
license = "Apache-2.0"
repository = "https://github.com/Bazooo/svg-sprite-maker"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-confirm", "dialog-save"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
svg_sprite_parser = { path = "svg_sprite_parser" }
tempfile = "3"
xml-rs = "0"
derive_builder = "0"
specta = "=2.0.0-rc.7"
tauri-specta = { version = "=2.0.0-rc.4", features = ["typescript"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
